# GaussParallel

./: CMakeLists.txt  main.cpp  main7.cpp
